# distributed-graph-fpga

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  Makefile  README.md  Readme.md
doc/: results.md  (+1 more)
hw_src/FPGA/: CMakeLists.txt  Makefile  emulation-setup.sh  power.report  util_full.report  util_slr.report
hw_src/FPGA/_x/: v++_compile_sssp_hw_guidance.json  v++_compile_sssp_hw_guidance.pb
hw_src/FPGA/debug/: defn.h
hw_src/FPGA/host/bfs/: host.cpp
hw_src/FPGA/host/pagerank/: host.cpp
hw_src/FPGA/host/spmv/: host.cpp
hw_src/FPGA/host/sssp/: host.cpp
hw_src/FPGA/host/wcc/: host.cpp
hw_src/FPGA/kernel/: libfpga.h
hw_src/FPGA/kernel/bfs/: bfs_kernel.cpp  bfs_kernel_0.xo  bfs_kernel_0.xo.compile_summary  connectivity.cfg  connectivity_bfs.cfg
hw_src/FPGA/kernel/debug/: defn.h  hls.tcl  kernel.cpp  kernel_test.cpp  libfpga.h  pagerank_dataflow.cpp  pagerank_kernel.cpp
hw_src/FPGA/kernel/pagerank/: cache.h  connectivity_pagerank.cfg  defn.h  pagerank_kernel.cpp  pagerank_kernel.cpp.bkp  pagerank_kernel.xo.compile_summary  pagerank_kernel_0.xo  pagerank_kernel_0.xo.compile_summary
hw_src/FPGA/kernel/spmv/: connectivity_spmv.cfg  spmv_hw.xo.compile_summary  spmv_kernel.cpp
hw_src/FPGA/kernel/sssp/: Makefile  connectivity_sssp.cfg  sssp_hw.xo.compile_summary  sssp_kernel.cpp  sssp_kernel.cpp.bkp  sssp_kernel.cpp.bkp.2  sssp_kernel.xo.compile_summary  sssp_kernel_0.xclbin.info  sssp_kernel_0.xclbin.link_summary  sssp_kernel_0.xo  sssp_kernel_0.xo.compile_summary
hw_src/FPGA/kernel/wcc/: connectivity_wcc.cfg  wcc_kernel.cpp  wcc_kernel_0.xo  wcc_kernel_0.xo.compile_summary
hw_src/FPGA/preprocess/: CMakeLists.txt  Readme.md  preprocess-bls.cpp  preprocess-hash.cpp  preprocess-original.cpp  preprocess.cpp
hw_src/FPGA/tools/: full_report.sh  power.report  power.report.8.pe  power.report.pr.4.pe  report_usage.tcl  util_full.report  util_slr.report  vivado.jou  vivado_11565.backup.jou  vivado_16142.backup.jou  vivado_27288.backup.jou  vivado_2952.backup.jou  vivado_3640.backup.jou
hw_src/FPGA/utils/: xcl2.cpp  xcl2.hpp
sw_src/grid/: CMakeLists.txt  Readme.md  common.h  main.c  parallel.h  partition.c  partition.h  pr-grid.c  radixSort_ligra.h  transpose_ligra.h  utils.c  utils.h  utils_ligra.h
sw_src/grid/data/: README
sw_src/shared-memory/: CMakeLists.txt  Readme.md  pagerank_omp.c  run.sh  utils.h
(+340 files in other folders)
